# microscurid-rust

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: agent.rs
examples/esp32s3/: .gitignore  Cargo.toml  sdkconfig.defaults
examples/esp32s3/src/: main.rs
examples/linux/: Cargo.toml
examples/linux/src/: main.rs
src/: agent.rs  did.rs  keys.rs  lib.rs  microscurid.proto  net.rs
src/agent/: espidfagent.rs  linuxagent.rs
src/keys/: esp32s3keys.rs  espidfkeys.rs  linuxkeys.rs
