[package]
name = "microscurid-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Reference for binary size optimization https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bytes = "1.5.0"
eip55 = "0.4.0"
hex = "0.4.3"
hex-literal = "0.4.1"
prost = "0.12.3"
rustls-pemfile = "2.1.1"
secp256k1 = { version = "0.28.2", features = ["rand-std", "hashes-std"] }
sha3 = "0.10.8"
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-rustls = "0.25.0"

[build-dependencies]
prost-build = "0.12.3"
