[package]
name = "microscurid-rust"
version = "0.1.0"
edition = "2021"

# Reference for binary size optimization https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bytes = "1.5.0"
eip55 = "0.4.0"
hex = "0.4.3"
hex-literal = "0.4.1"
libsecp256k1 = "0.7.1"
prost = "0.12.3"
rand = "0.8.5"
sha3 = "0.10.8"

[build-dependencies]
prost-build = "0.12.3"
