[package]
name = "microscurid-rust"
version = "0.1.0"
edition = "2021"

# Reference for binary size optimization https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bytes = "1.5.0"
eip55 = "0.4.0"
hex = "0.4.3"
hex-literal = "0.4.1"
libsecp256k1 = "0.7.1"
prost = "0.12.3"
rand = "0.8.5"
sha3 = "0.10.8"

[target.xtensa-esp32s3-espidf.dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = { version = "0.43.1", default-features = false }
esp-idf-sys = { version = "0.34.1", default-features = false }

[build-dependencies]
prost-build = "0.12.3"
